--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Use Laravel's Blade templates in Kirby CMS",
     "version": "0.0.1",
     "homepage": "https://github.com/jevets/kirby-component-blade-template",
+    "keywords": ["kirby", "blade", "laravel", "template"],
     "authors": [
         {
             "name": "Steve Jamesson",
